Added: 	- enterSlideAnimation and exitSlideAnimation animations 	- getWidth() and getHeight() return width/height in pxs

--- a/stick_man.html
+++ b/stick_man.html
@@ -12,6 +12,6 @@
 	</head>
 	<body>
 		<script src="stick_man.js"></script>
-		<script src="main.js"></script>
+		<script src="tests.js"></script>
 	</body>
 </html>
